add increase decrease book quantity and delete backend

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -25,7 +25,7 @@ spring:
   jpa:
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
+        dialect: org.hibernate.dialect.MySQLDialect
         hibernate.format_sql: true
         use-new-id-generator-mappings: false
     show-sql: false
