--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -73,6 +73,18 @@
             <version>3.0.5</version>
         </dependency>
 
+        <!--
+          For Maven, add the following dependency to your POM and replace with the
+          version number you want to use from:
+          - https://mvnrepository.com/artifact/com.stripe/stripe-java or
+          - https://github.com/stripe/stripe-java/releases/latest
+        -->
+        <dependency>
+            <groupId>com.stripe</groupId>
+            <artifactId>stripe-java</artifactId>
+            <version>24.0.0</version>
+        </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
